--- a/src/app/resume-en/resume-en.component.html
+++ b/src/app/resume-en/resume-en.component.html
@@ -91,6 +91,17 @@
                     </div>
                 </div>
 
+                <div class="ro-cp-resume-block ro-margin-top">
+
+                    <label>LANGUAGES</label>
+
+                    <div class="ro-flex-column ro-flex-fill">
+
+                        <ro-language-block [languages]="resumeData.languages"></ro-language-block>
+
+                    </div>
+                </div>
+
             </div>
 
         </div>
