--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,9 +5,9 @@
         <img src="../assets/Jeremy-Bouton-logo2.png">
 
         <div class="ro-flex-row ro-align-center">
-
+<!-- 
             <a class="ro-margin-right ro-text-secondary">FR</a>
-            <a class="ro-margin-right ro-text-secondary">EN</a>
+            <a class="ro-margin-right ro-text-secondary">EN</a> -->
 
             <a href="assets/resume.pdf" download class="btn-xl ro-btn-primary ro-flex-row ro-align-center">
                 <fa-icon class="ro-text-white ro-margin-right-sm" [icon]="faDownload"></fa-icon>
