--- a/src/style-sheets/margin-padding.scss
+++ b/src/style-sheets/margin-padding.scss
@@ -1,49 +1,49 @@
 .ro-padding {
-    padding: 12px;
+    padding:  0.625vw;
 }
 
 .ro-padding-xl {
-    padding: 20px;
+    padding: 1.041vw;
 }
 
 .ro-padding-xxxl {
-    padding: 50px;
+    padding: 4.61vw;
 }
 
 .ro-padding-sm {
-    padding: 6px;
+    padding: .3125vw;
 }
 
 .ro-padding-top {
-    padding-top: 12px;
+    padding-top:  0.625vw;
 }
 
 .ro-padding-top-sm {
-    padding-top: 6px;
+    padding-top: .3125vw;
 }
 
 .ro-padding-bottom {
-    padding-bottom: 12px;
+    padding-bottom:  0.625vw;
 }
 
 .ro-padding-bottom-sm {
-    padding-bottom: 6px;
+    padding-bottom: .3125vw;
 }
 
 .ro-padding-left {
-    padding-left: 12px;
+    padding-left:  0.625vw;
 }
 
 .ro-padding-left-sm {
-    padding-left: 6px;
+    padding-left: .3125vw;
 }
 
 .ro-padding-right {
-    padding-right: 12px;
+    padding-right:  0.625vw;
 }
 
 .ro-padding-right-sm {
-    padding-right: 6px;
+    padding-right: .3125vw;
 }
 
 .ro-padding-0 {
@@ -67,63 +67,67 @@
 }
 
 .ro-margin {
-    margin: 12px;
+    margin:  0.625vw;
 }
 
 .ro-margin-sm {
-    margin: 6px;
+    margin: .3125vw;
 }
 
 .ro-margin-top {
-    margin-top: 12px;
+    margin-top:  0.625vw;
 }
 
 .ro-margin-top-xl {
-    margin-top: 18px;
+    margin-top: 1.9375vw;
 }
 
 .ro-margin-top-sm {
-    margin-top: 6px;
+    margin-top: .3125vw;
 }
 
 .ro-margin-bottom {
-    margin-bottom: 12px;
+    margin-bottom:  0.625vw;
 }
 
 .ro-margin-bottom-sm {
-    margin-bottom: 6px;
+    margin-bottom: .3125vw;
 }
 
 .ro-margin-left {
-    margin-left: 12px;
+    margin-left:  0.625vw;
 }
 
 .ro-margin-left-sm {
-    margin-left: 6px;
+    margin-left: .3125vw;
 }
 
 .ro-margin-right {
-    margin-right: 12px;
+    margin-right:  0.625vw;
 }
 
 .ro-margin-right-sm {
-    margin-right: 6px;
+    margin-right: .3125vw;
+}
+
+.ro-margin-right-xl {
+    margin-right:  1.9375vw;
 }
 
 .ro-margin-x {
-    margin: 0 12px;
+    margin: 0  0.625vw;
 }
 
 .ro-margin-x-sm {
-    margin: 0 6px;
+    margin: 0 .3125vw;
 }
 
 .ro-margin-y {
-    margin: 12px 0;
+    margin:  0.625vw 0;
 }
 
 .ro-margin-y-sm {
-    margin: 6px 0;
+    margin: .3125vw 0;
 }
 
 .ro-margin-0 {
