style and assets teaks

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,7 +17,7 @@
 
     </div>
 
-    <div class="ro-cp-main-container">
+    <div class="ro-cp-main-resume-container">
 
         <ro-resume-en *ngIf="resumeData" [resumeData]="resumeData"></ro-resume-en>
 
