--- a/src/app/resume-en/resume-en.component.scss
+++ b/src/app/resume-en/resume-en.component.scss
@@ -1,7 +1,11 @@
 .ro-cp-resume-container {
-    width: 70vw;
+    width: 80vw;
     margin: 1.5625vw auto;
-    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+    // box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+}
+
+.rp-cp-title-container {
+    width: 75vw;
 }
 
 .ro-cp-picture-container {
@@ -20,7 +24,6 @@ label {
 }
 
 .ro-cp-resume-title {
-
     .title {
         font-size: 4vw;
         font-weight: bold;
@@ -31,6 +34,13 @@ label {
         font-size: 1.5vw;
         font-weight: bold;
         color: var(--ro-text-primary);
+    }
+}
+
+.ro-cp-download-btn {
+    
+    fa-icon {
+        font-size: 2.3vw;
     }
 }
 
