ready for production

--- a/src/app/resume-en/resume-en.component.html
+++ b/src/app/resume-en/resume-en.component.html
@@ -19,10 +19,10 @@
             </div>
 
             <div>
-                <a href="assets/resume.pdf" download class="ro-cp-download-btn">
+                <a href="assets/Jeremy-BOUTON-resume.pdf" download class="ro-cp-download-btn">
 
                     <fa-icon [icon]="faDownload" class="ro-text-secondary"></fa-icon>
-                    <!-- <img class="ro-text-secondary ro-margin-right-sm" src="../../assets/download-blue.svg" /> -->
+
                 </a>
             </div>
 
