slide-in-fwd on resume

--- a/src/app/resume-en/resume-en.component.html
+++ b/src/app/resume-en/resume-en.component.html
@@ -1,4 +1,4 @@
-<div class="ro-cp-resume-container ro-padding-xxxl">
+<div class="ro-cp-resume-container ro-padding-xxxl ro-slide-in-fwd-center">
 
     <ng-container *ngIf="resumeData">
 
