--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,6 +4,7 @@
 @import "style-sheets/style-class.scss";
 @import "style-sheets/color.scss";
 @import "style-sheets/ro-scrollbar.scss";
+@import "style-sheets/animations.scss";
 
 body {
     font-family: "Poppins", sans-serif;
