Resume PDF dynamically generated

--- a/src/app/resume-en/resume-en.component.html
+++ b/src/app/resume-en/resume-en.component.html
@@ -18,8 +18,8 @@
                 </div>
             </div>
 
-            <div>
-                <a href="assets/Jeremy-BOUTON-resume.pdf" download class="ro-cp-download-btn">
+            <div class="ro-cp-download-btn">
+                <a (click)="printAsPdf('resume-en')">
 
                     <fa-icon [icon]="faDownload" class="ro-text-secondary"></fa-icon>
 
