--- a/src/app/resume-en/resume-en.component.scss
+++ b/src/app/resume-en/resume-en.component.scss
@@ -1,7 +1,6 @@
 .ro-cp-resume-container {
     width: 80vw;
     margin: 1.5625vw auto;
-    // box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
 }
 
 .rp-cp-title-container {
@@ -40,6 +39,10 @@ label {
 .ro-cp-download-btn {
     fa-icon {
         font-size: 2.3vw;
+    }
+
+    @media print {
+        display: none;
     }
 }
 
