--- a/src/app/language-block/language-block.component.scss
+++ b/src/app/language-block/language-block.component.scss
@@ -5,12 +5,15 @@
     }
 
     .ro-cp-language-full {
-        @extend .ro-cp-language-box;
+        width: 3vw;
+        height: .35vw;
+        
         background-color: var(--ro-primary);
     }
 
     .ro-cp-language-empty {
-        @extend .ro-cp-language-box;
+        width: 3vw;
+        height: .35vw; 
         background-color: var(--ro-light-primary);
     }
 }
