--- a/src/app/resume-en/resume-en.component.scss
+++ b/src/app/resume-en/resume-en.component.scss
@@ -39,6 +39,9 @@ label {
 .ro-cp-download-btn {
     fa-icon {
         font-size: 2.3vw;
+        &:hover {
+            cursor: pointer;
+        }
     }
 
     @media print {
@@ -53,15 +56,6 @@ label {
         margin-top: 1.3125vw;
 
         .ro-cp-details-label {
-            color: var(--ro-text-secondary);
-            font-weight: bold;
-        }
-    }
-
-    .ro-cp-contacts {
-        margin-top: 1.3125vw;
-
-        .ro-cp-contacts-label {
             color: var(--ro-text-secondary);
             font-weight: bold;
         }
