--- a/src/style-sheets/margin-padding.scss
+++ b/src/style-sheets/margin-padding.scss
@@ -82,6 +82,10 @@
     margin-top: 3.9375vw;
 }
 
+.ro-margin-top-l {
+    margin-top: 1.3125vw;
+}
+
 .ro-margin-top-sm {
     margin-top: .3125vw;
 }
