--- a/src/app/resume-en/resume-en.component.html
+++ b/src/app/resume-en/resume-en.component.html
@@ -5,7 +5,7 @@
         <div class="ro-flex-row ro-align-center rp-cp-title-container">
 
             <div class="ro-cp-picture-container">
-                <img [src]="resumeData.profile.picture" class="ro-cp-resume-pic ro-margin-right-xl">
+                <img src="../../assets/PhotoCV.jpg" class="ro-cp-resume-pic ro-margin-right-xl">
             </div>
 
             <div class="ro-cp-resume-title ro-flex-fill">
@@ -38,15 +38,15 @@
                 </div>
 
                 <div class="ro-margin-top-l ro-flex-column">
-                    <label>PERSONAL DETAILS</label>
+                    <label>DÉTAILS PERSONNELS</label>
 
-                    <label class="ro-cp-details-label ro-margin-top-sm">Birth Date</label>
+                    <label class="ro-cp-details-label ro-margin-top-sm">Date de naissance</label>
                     <div>{{ resumeData.profile.birthdate }}</div>
 
-                    <label class="ro-cp-details-label ro-margin-top-sm">Nationality</label>
+                    <label class="ro-cp-details-label ro-margin-top-sm">Nationalité</label>
                     <div>{{ resumeData.profile.nationality }}</div>
 
-                    <label class="ro-cp-details-label ro-margin-top-sm">Localization</label>
+                    <label class="ro-cp-details-label ro-margin-top-sm">Localisation</label>
                     <div>{{ resumeData.profile.localisation }}</div>
                 </div>
 
@@ -63,7 +63,7 @@
 
                 <div class="ro-cp-resume-block">
 
-                    <label>PROFESSIONAL EXPERIENCE</label>
+                    <label>EXPÉRIENCE PROFESSIONNELLE</label>
 
                     <div class="ro-flex-column ro-flex-fill">
 
@@ -74,7 +74,7 @@
 
                 <div class="ro-cp-resume-block ro-margin-top-xl">
 
-                    <label>EDUCATION</label>
+                    <label>ÉDUCATION</label>
 
                     <div class="ro-flex-column ro-flex-fill">
 
@@ -85,7 +85,7 @@
 
                 <div class="ro-cp-resume-block ro-margin-top-xl">
 
-                    <label>SKILLS</label>
+                    <label>COMPÉTENCES</label>
 
                     <div class="ro-flex-column ro-flex-fill">
 
@@ -96,7 +96,7 @@
 
                 <div class="ro-cp-resume-block ro-margin-top-xl">
 
-                    <label>LANGUAGES</label>
+                    <label>LANGUES</label>
 
                     <div class="ro-flex-column ro-flex-fill">
 
