--- a/src/app/language-block/language-block.component.html
+++ b/src/app/language-block/language-block.component.html
@@ -1,21 +1,22 @@
-<ng-container *ngFor="let language of languages">
+<div class="ro-cp-languages">
 
-    <div class="ro-cp-language ro-flex-row ro-margin-bottom ro-margin-top ro-align-center">
+    <ng-container *ngFor="let language of languages">
 
-        <div class="ro-cp-language-level" *ngFor="let count of counter; let i = index">
+        <div class="ro-flex-row ro-align-center ro-flex-fill ro-cp-language">
 
-            <div *ngIf="i <= language.level - 1" class="ro-margin-right-sm ro-cp-language-full">
+            <div class="ro-cp-language-circle ro-cp-language-{{ language.level }} ro-flex-column ro-justify-center ro-align-center">
+                <div class="ro-cp-level-text">
+                    {{ language.level }}%
+                </div>
             </div>
 
-            <div *ngIf="i > language.level - 1" class="ro-margin-right-sm ro-cp-language-empty">
+            <div class="ro-margin-left-sm ro-cp-language-name">
+                {{ language.type }}
             </div>
+
 
         </div>
 
-        <div>
-            {{ language.type }}
-        </div>
+    </ng-container>
 
-    </div>
-
-</ng-container>
+</div>
