--- a/src/app/language-block/language-block.component.scss
+++ b/src/app/language-block/language-block.component.scss
@@ -1,16 +1,42 @@
+.ro-cp-languages {
+
+    display: flex;
+    flex-wrap: wrap;
+
+}
+
 .ro-cp-language {
-    .ro-cp-language-box {
-        width: 3vw;
-        height: .35vw;
-    }
+    width: 32%;
+    margin-bottom: .3125vw;
+}
 
-    .ro-cp-language-full {
-        @extend .ro-cp-language-box;
-        background-color: var(--ro-primary);
-    }
+.ro-cp-language-circle {
+    border: .5vw solid var(--ro-primary);
+    border-radius: 50%;
+    width: 3vw;
+    height: 3vw;
+    transform: rotate(45deg);
+}
 
-    .ro-cp-language-empty {
-        @extend .ro-cp-language-box;
-        background-color: var(--ro-light-primary);
-    }
+.ro-cp-level-text {
+    transform: rotate(-45deg);
+}
+
+.ro-cp-language-25 {
+    border-left-color: var(--ro-light-primary);
+    border-bottom-color: var(--ro-light-primary);
+    border-right-color: var(--ro-light-primary);
+}
+
+.ro-cp-language-50 {
+    border-left-color: var(--ro-light-primary);
+    border-bottom-color: var(--ro-light-primary);
+}
+
+.ro-cp-language-75 {
+    border-left-color: var(--ro-light-primary);
+}
+
+.ro-cp-language-name {
+    white-space: pre-wrap;
 }
