--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,600;0,700;1,400&family=Roboto&display=swap");
 @import "style-sheets/flex.scss";
 @import "style-sheets/margin-padding.scss";
 @import "style-sheets/style-class.scss";
@@ -6,9 +5,15 @@
 @import "style-sheets/ro-scrollbar.scss";
 @import "style-sheets/animations.scss";
 
+@font-face {
+    font-family: 'Poppins';
+    src: url('assets/fonts/Poppins-Regular.ttf') format('truetype');
+ }
+
 body {
-    font-family: "Poppins", sans-serif;
-    margin: 0 !important;
+
+
+    --font-main:  'Poppins', sans-serif;
 
     --ro-primary: #0b7af3;
     --ro-dark-primary: #0b5fb9;
@@ -26,7 +31,10 @@ body {
     --ro-toolbar-background-color: #c1dbf7;
     --ro-toolbar-foreground-color: #0b7af3;
     --ro-toolbar-foreground-color-hover: #0b5fb9;
+    
     font-size: 1vw;
+    margin: 0 !important;
+    font-family: var(--font-main);
 }
 
 a {
