Responsity fix, media print upgraded

--- a/src/app/experience-block/experience-block.component.scss
+++ b/src/app/experience-block/experience-block.component.scss
@@ -19,10 +19,10 @@ label {
 
 .ro-cp-title-label {
     color: var(--ro-text-secondary);
-    font-size: 1.3vw;
+    font-size: 1.3em;
 }
 
 .ro-cp-subtitle-label {
-    font-size: 1vw;
+    font-size: 1em;
     text-transform: uppercase;
 }
