--- a/src/app/language-block/language-block.component.scss
+++ b/src/app/language-block/language-block.component.scss
@@ -1,13 +1,13 @@
 .ro-cp-language-full {
-    width: 3vw;
-    height: .35vw;
+    width: 3em;
+    height: .35em;
     z-index: 99999;
     background-color: var(--ro-primary);
 }
 
 .ro-cp-language-empty {
-    width: 3vw;
-    height: .35vw;
+    width: 3em;
+    height: .35em;
     z-index: 99999;
     background-color: var(--ro-light-primary);
 }
