--- a/src/app/resume/resume.component.html
+++ b/src/app/resume/resume.component.html
@@ -1,4 +1,4 @@
-<div class="ro-cp-resume-container ro-padding-xxxl ro-slide-in-fwd-center">
+<div class="ro-cp-resume-container ro-padding-xxxl">
 
     <ng-container *ngIf="resumeData">
 
