--- a/src/style-sheets/margin-padding.scss
+++ b/src/style-sheets/margin-padding.scss
@@ -1,49 +1,49 @@
 .ro-padding {
-    padding:  0.625vw;
+    padding:  0.625em;
 }
 
 .ro-padding-xl {
-    padding: 1.041vw;
+    padding: 1.041em;
 }
 
 .ro-padding-xxxl {
-    padding: 4.61vw;
+    padding: 4.61em;
 }
 
 .ro-padding-sm {
-    padding: .3125vw;
+    padding: .3125em;
 }
 
 .ro-padding-top {
-    padding-top:  0.625vw;
+    padding-top:  0.625em;
 }
 
 .ro-padding-top-sm {
-    padding-top: .3125vw;
+    padding-top: .3125em;
 }
 
 .ro-padding-bottom {
-    padding-bottom:  0.625vw;
+    padding-bottom:  0.625em;
 }
 
 .ro-padding-bottom-sm {
-    padding-bottom: .3125vw;
+    padding-bottom: .3125em;
 }
 
 .ro-padding-left {
-    padding-left:  0.625vw;
+    padding-left:  0.625em;
 }
 
 .ro-padding-left-sm {
-    padding-left: .3125vw;
+    padding-left: .3125em;
 }
 
 .ro-padding-right {
-    padding-right:  0.625vw;
+    padding-right:  0.625em;
 }
 
 .ro-padding-right-sm {
-    padding-right: .3125vw;
+    padding-right: .3125em;
 }
 
 .ro-padding-0 {
@@ -67,71 +67,71 @@
 }
 
 .ro-margin {
-    margin:  0.625vw;
+    margin:  0.625em;
 }
 
 .ro-margin-sm {
-    margin: .3125vw;
+    margin: .3125em;
 }
 
 .ro-margin-top {
-    margin-top:  0.625vw;
+    margin-top:  0.625em;
 }
 
 .ro-margin-top-xl {
-    margin-top: 3.9375vw;
+    margin-top: 3.9375em;
 }
 
 .ro-margin-top-l {
-    margin-top: 1.3125vw;
+    margin-top: 1.3125em;
 }
 
 .ro-margin-top-sm {
-    margin-top: .3125vw;
+    margin-top: .3125em;
 }
 
 .ro-margin-bottom {
-    margin-bottom:  0.625vw;
+    margin-bottom:  0.625em;
 }
 
 .ro-margin-bottom-sm {
-    margin-bottom: .3125vw;
+    margin-bottom: .3125em;
 }
 
 .ro-margin-left {
-    margin-left:  0.625vw;
+    margin-left:  0.625em;
 }
 
 .ro-margin-left-sm {
-    margin-left: .3125vw;
+    margin-left: .3125em;
 }
 
 .ro-margin-right {
-    margin-right:  0.625vw;
+    margin-right:  0.625em;
 }
 
 .ro-margin-right-sm {
-    margin-right: .3125vw;
+    margin-right: .3125em;
 }
 
 .ro-margin-right-xl {
-    margin-right:  1.9375vw;
+    margin-right:  1.9375em;
 }
 
 .ro-margin-x {
-    margin: 0  0.625vw;
+    margin: 0  0.625em;
 }
 
 .ro-margin-x-sm {
-    margin: 0 .3125vw;
+    margin: 0 .3125em;
 }
 
 .ro-margin-y {
-    margin:  0.625vw 0;
+    margin:  0.625 0;
 }
 
 .ro-margin-y-sm {
-    margin: .3125vw 0;
+    margin: .3125em 0;
 }
 
 .ro-margin-0 {
