--- a/src/style-sheets/style-class.scss
+++ b/src/style-sheets/style-class.scss
@@ -30,22 +30,22 @@
 }
 
 .btn {
-    padding: .3125vw  0.625vw;
+    padding: .3125vw  0.625em;
     border-radius: 2px;
 }
 
 .btn-xl {
     @extend .btn;
-    font-size: 1.1vw;
+    font-size: 1.1em;
     fa-icon {
-        font-size: .9vw;
+        font-size: .9em;
     }
 }
 
 .btn-sm {
     @extend .btn;
-    font-size: 0.52vw;
+    font-size: 0.52em;
     fa-icon {
-        font-size: 0.42vw;
+        font-size: 0.42em;
     }
 }
