--- a/src/styles.scss
+++ b/src/styles.scss
@@ -32,9 +32,17 @@ body {
     --ro-max-container-size: 1200px;
     
     font-size: 16px;
+
+    @media screen and (max-width: 600px)  {
+        font-size: 8px !important;
+    }
+    @media screen and (min-width: 601px) and (max-width: 1200px)  {
+        font-size: 10px !important;
+    }
     @media print {
         font-size: 9px !important;
     }
+    
     margin: 0 !important;
     font-family: var(--font-main);
 }
