--- a/src/style-sheets/margin-padding.scss
+++ b/src/style-sheets/margin-padding.scss
@@ -98,6 +98,10 @@
     margin-bottom: .3125em;
 }
 
+.ro-margin-bottom-xl {
+    margin-bottom: 3.9375em;
+}
+
 .ro-margin-left {
     margin-left:  0.625em;
 }
